@@ -1,0 +1,8 @@
+#
+# write-only array.
+#
+
+@files = ls();
+pop(@files);
+
+println("test");
